--- a/src/app/carnet/carnetrempli/carnetrempli.component.html
+++ b/src/app/carnet/carnetrempli/carnetrempli.component.html
@@ -43,7 +43,7 @@
                 <Label col="1" text="0673876546" textWrap="true" class="groupe_sanguin"></Label>    
             </GridLayout>
             <GridLayout>
-                <Button row="0" text="RENSEIGNER MON CARNET" class="btn btn-warning" id="button_health_book"></Button> 
+                <Button [nsRouterLink]="['/carnet/cgu']" row="0" text="RENSEIGNER MON CARNET" class="btn btn-warning" id="button_health_book"></Button> 
             </GridLayout>
         </StackLayout>
     </GridLayout>
