--- a/src/app/danger/historique-signalement/historique-signalement.component.html
+++ b/src/app/danger/historique-signalement/historique-signalement.component.html
@@ -19,11 +19,11 @@
         <ScrollView>
             <StackLayout>
                 <StackLayout class="hr"></StackLayout>
-                <GridLayout columns="auto, *" class="mes_signalements">
+                <GridLayout [nsRouterLink]="['/danger/ficheSignalement']" columns="auto, *" class="mes_signalements">
                     <Label col="0" text="FICHE N° 00001" class="numero_fiche"></Label>
                     <Label col="1" text="20/04/2019 11:35" class="date_heure"></Label>
                 </GridLayout>
-                <GridLayout columns="auto, 200">
+                <GridLayout [nsRouterLink]="['/danger/ficheSignalement']" columns="auto, 200">
                     <ContentView col="0" id="myDanger1" width="300px" height="300px" ></ContentView>
                     <Label col="1" text="SIGNALER DANGER" class="declaration"></Label>
                     <Label col="1" text="Element sur la piste" class="categorie"></Label>
