--- a/src/app/sos/appel/appel.component.html
+++ b/src/app/sos/appel/appel.component.html
@@ -1,19 +1,4 @@
-<ActionBar class="entete">
-    <!-- 
-    Use the NavigationButton as a side-drawer button in Android
-    because ActionItems are shown on the right side of the ActionBar
-    -->
-    <NavigationButton ios:visibility="collapsed" icon="res://menu" (tap)="onDrawerButtonTap()"></NavigationButton>
-    <!-- 
-    Use the ActionItem for IOS with position set to left. Using the
-    NavigationButton as a side-drawer button in iOS is not possible,
-    because its function is to always navigate back in the application.
-    -->
-    <ActionItem icon="res://menu" android:visibility="collapsed" (tap)="onDrawerButtonTap()" ios.position="left">
-    </ActionItem>
-    <Label text="SOS VICTIME" color="black"></Label>
 
-</ActionBar>
 <GridLayout class="overlay" rows="50,50,50,50,50,50,120,50">
     <Label class="page__content-placeholder" text="Les secours sont prevenus" color="black" marginTop="0"
         fontWeight="Bold" fontSize="20px" row="1"></Label>
@@ -27,10 +12,10 @@
         fontWeight="Bold" row="5"></Label>
     <Label class="page__content-placeholder" text="" color="black" marginTop="0"
         fontSize="18px" fontWeight="Bold" row="6"></Label>
-    <Label class="page__content-placeholder"  width="90%" textAlign="center" paddingTop="10%" paddingLeft="47%"height="10%"text=" Gestes de Premiers secours" backgroundColor="#FDE407" color="black" marginTop="0"
+    <Label class="page__content-placeholder"  [nsRouterLink]="['/sos/gestesecours']" width="90%" textAlign="center" paddingTop="10%" paddingLeft="47%"height="10%"text=" Gestes de Premiers secours" backgroundColor="#FDE407" color="black" marginTop="0"
         fontSize="18px" fontWeight="Bold" row="7"></Label>
     <GridLayout>
-        <button text="Complements d'Informations"  pageTransition="slide"
+        <button text="Complements d'Informations"  [nsRouterLink]="['/sos/nature']" pageTransition="slide"
             color="white" backgroundColor="#FF0000" marginTop="20%" marginBottom="0"></button>
 
     </GridLayout>
