--- a/src/app/sos/blessure/blessure.component.html
+++ b/src/app/sos/blessure/blessure.component.html
@@ -69,8 +69,7 @@
             </TabStripItem>
         </TabStrip>
     </BottomNavigation> -->
-
-<!-- <GridLayout class="page__content" class="overlay" rows="50,50,50,50,50,50" >
+<GridLayout class="page__content" class="overlay" rows="50,50,50,50,50,50" >
     <Label  class="page__content-placeholder" text="Nous avons bien reçut " row="0" color="black"
     fontWeight="Bold" fontSize="18px" marginLeft="0%" ></Label>
     <Label  class="page__content-placeholder" text="ces complements d'informations " row="1" color="black"
@@ -79,4 +78,4 @@
     fontWeight="Bold" fontSize="18px" marginLeft="0%"></Label>
     <Label  class="page__content-placeholder" text="restez calme, respirez profondemment " row="3" color="black"
     fontWeight="Bold" fontSize="18px" marginLeft="0%"></Label>
-</GridLayout>  -->
+</GridLayout>
