--- a/src/app/utilisateur/gestion-compte/gestion-compte.component.html
+++ b/src/app/utilisateur/gestion-compte/gestion-compte.component.html
@@ -1,1 +1,47 @@
-<Button text="gestion-compte works!" class="btn btn-primary"></Button>
+<StackLayout>
+<!-- <GridLayout rows="50, 100" class="photo_profil">
+    <Label row="0" text="PHOTO" class="photo_profil"></Label>
+    <ContentView row="1" width="450px" backgroundColor="#C4C4C4" class="photo_danger"></ContentView>
+</GridLayout> -->
+<!-- <FlexboxLayout  flexDirection="column" justifyContent="center">
+    <Label text="&#xf030;" class="nt-icon fas" id="appPhoto"></Label>
+</FlexboxLayout>  -->
+
+<!-- <GridLayout rows="50, 220">
+    <!-- <Label row="0" text="PHOTO" class="photo_profil" fontWeight="Bold" fontSize="18"></Label> -->
+    <!-- <Label row="0" text="Changer la photo" id="camera3" textAlign="center"></Label> -->
+    <!-- <ContentView row="1" width="45%" backgroundColor="#C4C4C4" class="photo_danger" text="Changer la photo"></ContentView>
+    <Label row="1" text="&#xf03e;" class="nt-icon fas" id="camera"></Label>
+    
+</GridLayout> -->
+
+<GridLayout rows="220">
+    <ContentView row="0" width="50%" backgroundColor="#C4C4C4" class="photo_danger"></ContentView>
+</GridLayout>
+<FlexboxLayout  rows="50, 220" flexDirection="column" justifyContent="center">
+    <Label text="&#xf030;" row="0" class="nt-icon fas" id="camera"></Label>
+    <Label text="PRENDRE UNE PHOTO" row="0" id="camera2"></Label>
+    <ContentView row="1" width="45%" backgroundColor="#C4C4C4" class="photo_danger"></ContentView>
+</FlexboxLayout> 
+
+
+<GridLayout rows="80">
+    <Button row="0" text="GESTION MOT DE PASSE" [nsRouterLink]="['/utilisateur/gestionmdp']" pageTransition="flip" class="btn btn-warning"></Button> 
+</GridLayout>
+<GridLayout rows="120">
+    <Button row="0" text="GESTION E-MAIL" [nsRouterLink]="['/utilisateur/gestionmail']" pageTransition="flip" class="btn btn-warning"></Button> 
+</GridLayout>
+<BottomNavigation>
+    <TabStrip>
+        <TabStripItem>
+            <Label col="0" text="&#xf05a;" class="nt-icon fas"></Label>
+        </TabStripItem>
+        <TabStripItem>
+            <Label col="1" text="&#xf041;" class="nt-icon fas"></Label>
+        </TabStripItem>
+        <TabStripItem>
+            <Label col="2" text="&#xf3c5;" class="nt-icon fas"></Label>
+        </TabStripItem>
+    </TabStrip>
+</BottomNavigation>
+</StackLayout>
