--- a/src/app/utilisateur/station/station.component.html
+++ b/src/app/utilisateur/station/station.component.html
@@ -22,6 +22,7 @@
     <BottomNavigation height="100%">
         <TabStrip>
             <TabStripItem>
+                <!-- <image src="~/images/infos.png"></image> -->
                 <Label col="0" text="&#xf05a;" class="nt-icon fas"></Label>
             </TabStripItem>
             <TabStripItem>
