--- a/src/app/carnet/formulaire/formulaire.component.html
+++ b/src/app/carnet/formulaire/formulaire.component.html
@@ -1,22 +1,6 @@
-<ActionBar class="actionBarCarnet">
-    <!-- 
-    Use the NavigationButton as a side-drawer button in Android
-    because ActionItems are shown on the right side of the ActionBar
-    -->
-    <NavigationButton ios:visibility="collapsed" icon="res://menu" (tap)="onDrawerButtonTap()"></NavigationButton>
-    <!-- 
-    Use the ActionItem for IOS with position set to left. Using the
-    NavigationButton as a side-drawer button in iOS is not possible,
-    because its function is to always navigate back in the application.
-    -->
-    <ActionItem icon="res://menu" android:visibility="collapsed" (tap)="onDrawerButtonTap()"
-        ios.position="left" >
-    </ActionItem>
-    <Label class="blackPage" text="CARNET DE SANTE"></Label>
-</ActionBar>
 
 
-       
+
 <StackLayout class="form">
     <StackLayout class="input-field">
     <TextField class="input" hint="Prénom" [(ngModel)]=santeServ.dossierSante.prenom></TextField>
@@ -32,8 +16,8 @@
     <TextField class="input" hint="Personne à contacter"></TextField>
     <TextField class="input" hint="Numéro de la personne à contacter" keyboardType="phone" autocorrect="false" autocapitalizationType="none"></TextField>
     <FlexboxLayout flexDirection="row" flexWrap="wrap" justifyContent="space-around">   
-        <Button text="VALIDER" class="valider_carnet"></Button> 
-        <Button text="SUPPRIMER" class="supprimer_carnet"></Button>
+        <Button [nsRouterLink]="['/carnet']" text="VALIDER" class="valider_carnet"></Button> 
+        <Button [nsRouterLink]="['/carnet']" text="SUPPRIMER" class="supprimer_carnet"></Button>
     </FlexboxLayout>
 </StackLayout>
 <StackLayout>
