--- a/src/app/danger/confirmation-envoi/confirmation-envoi.component.html
+++ b/src/app/danger/confirmation-envoi/confirmation-envoi.component.html
@@ -3,9 +3,9 @@
 </ActionBar>
 <GridLayout rows="260, 360">
 
-    <ContentView row="0" class="danger_button" text="" width="600px" height="600px" backgroundColor="#FF7F00"></ContentView> 
+    <ContentView [nsRouterLink]="['/danger/historiqueSignalement']" row="0" class="danger_button" text="" width="600px" height="600px" backgroundColor="#FF7F00"></ContentView> 
 
-    <Label row="1" text="MERCI pour votre contribution active au programme de signalement partricipatif mis en place par la station. 
+    <Label [nsRouterLink]="['/utilisateur/station']" row="1" text="MERCI pour votre contribution active au programme de signalement partricipatif mis en place par la station. 
 
 Vous pouvez suivre l’évolution de votre signalement dans la rubrique “Mes signalements”" textWrap="true" class="message_confirmation"></Label>
     
@@ -15,10 +15,10 @@ Vous pouvez suivre l’évolution de votre signalement dans la rubrique “Mes s
     <BottomNavigation height="100%">
         <TabStrip>
             <TabStripItem>
-                <Label col="0" text="&#xf015;" class="nt-icon fas"></Label>
+                <Label [nsRouterLink]="['']" col="0" text="&#xf015;" class="nt-icon fas"></Label>
             </TabStripItem>
             <TabStripItem>
-                <Label col="2" text="&#xf573;" class="nt-icon fas"></Label>
+                <Label [nsRouterLink]="['']" col="2"  text="&#xf573;" class="nt-icon fas"></Label>
             </TabStripItem>
         </TabStrip>
     </BottomNavigation>
