--- a/src/app/danger/recapitulatif/recapitulatif.component.html
+++ b/src/app/danger/recapitulatif/recapitulatif.component.html
@@ -19,7 +19,7 @@
 <GridLayout rows="240, 20, 40, 50, 50, 50, 50, *,*,*">
     <ContentView row="0" class="danger_button" text="" width="600px" height="600px" backgroundColor="#000000"></ContentView> 
     <Label row="1" text="ENVOYER" id="envoyer"></Label>
-    <Label row="2" text="&#xf064;" class="nt-icon fas" id="fleche_envoi"></Label> 
+    <Label row="2" [nsRouterLink]="['/danger/confirmationEnvoi']" text="&#xf064;" class="nt-icon fas" id="fleche_envoi"></Label> 
     <Label row="3" text="Localisation" backgroundColor="#000000" color="#F8FD07" fontSize="30px"></Label>
     <Label row="4" text="Latitude: 47.12317663" color="#000000" fontSize="30px"></Label>
     <Label row="5" text="Longitude: 2.44583129" color="#000000" fontSize="30px"></Label>
