--- a/src/app/sos/accueil-sos/accueil-sos.component.html
+++ b/src/app/sos/accueil-sos/accueil-sos.component.html
@@ -12,6 +12,6 @@
     <ActionItem icon="res://menu" android:visibility="collapsed" (tap)="onDrawerButtonTap()"
         ios.position="left">
     </ActionItem>
-    <Label class="greyPage" text="SOS : POSTE DE SECOURS"></Label>
+    <Label class="greyPage" text="POSTE DE SECOURS"></Label>
 </ActionBar>
 <page-router-outlet></page-router-outlet>
