--- a/src/app/sos/etat/etat.component.html
+++ b/src/app/sos/etat/etat.component.html
@@ -1,7 +1,8 @@
 <GridLayout class="search__page__content">
     <Label class="greyPage" id="vousEtes" text="Vous êtes"></Label>
-    <Label class="greyPage" id="redVictime" width="150" height="150" backgroundColor="#FF0000"></Label>
-    <Label class="greyPage" id="victime" text="VICTIME"></Label>
-    <Label class="greyPage" id="greenTemoin" width="150" height="150" backgroundColor="#106D0E"></Label>
-    <Label class="greyPage" id="temoin" text="TEMOIN"></Label>
+    <Label class="greyPage" [nsRouterLink]="['/sos/gravite']"id="redVictime" width="150" height="150" backgroundColor="#FF0000"></Label>
+    <Label class="greyPage" [nsRouterLink]="['/sos/gravite']" id="victime" text="VICTIME"></Label>
+    <Label class="greyPage" [nsRouterLink]="['/sos/gravite']"id="greenTemoin" width="150" height="150" backgroundColor="#106D0E"></Label>
+    <Label class="greyPage" [nsRouterLink]="['/sos/gravite']"id="temoin" text="TEMOIN"></Label>
 </GridLayout>
+
