--- a/src/app/utilisateur/cguappli/cguappli.component.html
+++ b/src/app/utilisateur/cguappli/cguappli.component.html
@@ -22,5 +22,9 @@
         <Label class="page__content-placeholder" text="  Mirdeo, mihi credite, Patres conscripti (id quod vosmet de me existimatis et facitis ipsi) incredibili quodam amore patriae, qui me amor et subvenire olim impendentibus periculis maximis cum dimicatione capitis, et rursum, cum omnia tela undique esse intenta in patriam viderem, subire coegit atque excipere unum pro universis. Hic me meus in rem publicam animus pristinus ac perennis cum C. Caesare reducit, reconciliat, restituit in gratiam." row="2" color="black" textWrap="true"></Label>
         <Label class="page__content-placeholder" text="  Aled ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem." row="3" color="black" textWrap="true"></Label>
     </GridLayout>
+    <GridLayout>
+        <Button [nsRouterLink]="['/utilisateur/choixstation']" text="Accepter ces conditions" backgroundColor="#0DF24D" color="white" (tap)="submit()" fontSize="Large"
+            class="soumission" marginTop="66%" marginBottom="10%"></Button>
+    </GridLayout>
    
 </ScrollView>
