--- a/src/app/carnet/cgu/cgu.component.html
+++ b/src/app/carnet/cgu/cgu.component.html
@@ -1,8 +1,8 @@
 <ScrollView>
-    <GridLayout class="page__content" rows="100,100,100" class="condition">
+    <GridLayout class="page__content" rows="200,200,200,90" class="condition">
 
         <Label class="page__content-placeholder"
-            text="   L’application Skiview vous permet d’enregistrer des données cruciales concernant votre état de santé susceptibles de faciliter,d’améliorer, de sécurier votre prise en charge en cas de blessure sur le domaine skiable. "
+            text="   L’application Skiview vous permet d’enregistrer des données cruciales concernant votre état de santé susceptibles de faciliter,d’améliorer, de sécuriser votre prise en charge en cas de blessure sur le domaine skiable. "
             row="0" color="black" textWrap="true"></Label>
         <Label class="page__content-placeholder"
             text="    Vous êtes libre de choisir d’utiliser ou non ce service. Le formulaire de renseignement des données ne contient aucun champs obligatoire. C’est vous qui décidez des informations que vous consentez à partager avec nos équipes."
@@ -10,6 +10,9 @@
         <Label class="page__content-placeholder"
             text="    Ces informations leur permettront de vous prendre en charge plus efficacement et de façon personnalisée. Elles leur permettront également d’assurer un meilleur passage de relais avec les ambulanciers et/ou le médecin qui vous prendrons en charge."
             row="2" color="black" textWrap="true"></Label>
+        <Label class="page__content-placeholder"
+            text=""
+            row="3" color="black" textWrap="true"></Label>
 
     </GridLayout>
 
