--- a/src/app/utilisateur/gestion-compte/gestion-compte.component.html
+++ b/src/app/utilisateur/gestion-compte/gestion-compte.component.html
@@ -18,9 +18,9 @@
 <GridLayout rows="220">
     <ContentView row="0" width="50%" backgroundColor="#C4C4C4" class="photo_danger"></ContentView>
 </GridLayout>
-<FlexboxLayout  rows="50, 220" flexDirection="column" justifyContent="center">
-    <Label text="&#xf030;" row="0" class="nt-icon fas" id="camera"></Label>
-    <Label text="PRENDRE UNE PHOTO" row="0" id="camera2"></Label>
+<FlexboxLayout  rows="50, 120" flexDirection="column" justifyContent="center">
+    <Label text="&#xf030;" row="0" class="nt-icon fas" id="cameraProfil"></Label>
+    <Label text="PRENDRE UNE PHOTO" row="0" id="cameraProfil2"></Label>
     <ContentView row="1" width="45%" backgroundColor="#C4C4C4" class="photo_danger"></ContentView>
 </FlexboxLayout> 
 
