--- a/src/app/utilisateur/gestionmail/gestionmail.component.html
+++ b/src/app/utilisateur/gestionmail/gestionmail.component.html
@@ -5,7 +5,7 @@
     <TextField class="input" hint="Nouvel E-mail"></TextField>
     <TextField class="input" hint="confirmation E-mail"></TextField>
     <FlexboxLayout flexDirection="row" flexWrap="wrap" justifyContent="flex-start">  
-    <Button text="VALIDER" class="valider_email" backgroundColor= ""></Button> 
+    <Button [nsRouterLink]="['/utilisateur/gestioncompte']" text="VALIDER" class="valider_email" backgroundColor= ""></Button> 
     </FlexboxLayout>
 </StackLayout>
 <BottomNavigation height="100%">
