--- a/src/app/utilisateur/connexion/connexion.component.html
+++ b/src/app/utilisateur/connexion/connexion.component.html
@@ -1,24 +1,14 @@
-<GridLayout class="pagecontent"rows="50,30" columns=*>
-    <!-- <Label class="pagecontent-icon fas" text="&#xf002;"></Label> -->
-    <Label class="pagecontent-placeholder" text="  Vous souhaitez utiliser de nouveau notre application pour votre sortie en station. " row="0" color="black" textWrap="true"></Label>
-    <Label class="pagecontent-placeholder" text="  CONNECTEZ-VOUS!! " row="1" color="black" textWrap="true"></Label>
-
-     <!--<Label text="{{ checkYes ? '&#xf192;' : '&#xf10c;'}}" 
-        class="{{ checkYes ? 'fontawesome' : 'radioBefore'}}" 
-        (tap)="changeAction()"row="1" column="0" >
-    </Label>
-    <Switch checked="true"row="1" column="0"></Switch>
-   <label class="page__content-placeholder" text="Acceptez ces conditions " fontSize="20px" color="black"marginTop="0%"
-   row="1" column="1"colspan="2" fontWeight="Bold" >
-    </label>  -->
+<GridLayout class="pagecontent"rows="50,35" columns=*>
+  <Label class="pagecontent-placeholder" text="  Vous souhaitez utiliser de nouveau notre application pour votre sortie en station. " fontSize="15"row="0" color="black" textWrap="true"></Label>
+  <Label class="pagecontent-placeholder" text="  CONNECTEZ-VOUS!! " row="1" textAlign="center"  fontSize="25" color="black" fontWeight="Bold" textWrap="true"></Label>
 </GridLayout>
 
 
- <StackLayout class="form" marginTop="33%">
+<StackLayout class="form" marginTop="33%">
 
-    <StackLayout class="input-field">
-      <TextField class="input"hint="entrez votre mot de passe" ></TextField>
-    </StackLayout>
-
-    <Button [nsRouterLink]="['/utilisateur/choixstation']" backgroundColor="black" color="#F8FD07"text="connexion" (tap)="submit()"></Button>
+  <StackLayout class="input-field">
+    <TextField class="input"hint="entrez votre mot de passe" ></TextField>
   </StackLayout>
+
+  <Button [nsRouterLink]="['/utilisateur/choixstation']" backgroundColor="black" color="#F8FD07"text="connexion" (tap)="submit()"></Button>
+</StackLayout>
